AdminToolbox.EndpointManagement/4.0.5.0/ChangeLog.md
# **AdminToolbox.EndpointManagement**

![AdminToolbox.EndpointManagement](https://github.com/TheTaylorLee/AdminToolbox/blob/master/Images/AdminToolbox.EndpointManagement.png)

* **1.0.0** Created the Module
* **1.0.1** Corrected parameter for Disable-Standby
* **1.1.1** Added Functions
* **1.1.2** Function improvements
* **1.1.3** Updated Remove-Shortcuts
* **1.1.4** Updated Disable-Standby
* **1.1.5** Updated the Module Intro
* **1.1.6** Updated the Module Intro
* **1.2.7** Added Enable-RSATFeatures functions
* **1.2.9** Added Powerbutton and Lid Actions to Disable-Standby
* **1.3.9** Added Disable-PasswordPeek
* **1.3.10** Added A Change Log
* **1.3.11** Exported Functions to the Manifest
* **1.4.11** Consolidated UAC functions into a single function
* **2.4.11** Restructured Functions into separate files
* **2.4.12** Added Get-Elevation private function
* **2.4.13** Added parameter help information and added Elevation warnings
* **2.4.14** Added Tags and Links
* **2.4.15** Updated Get-IntroPCS
* **2.4.16** Fixed function typo
* **2.4.18** Setup Github and updated Manifest PSData
* **2.4.19** Added Command Aliases
* **3.1.1.1** Moving to proper version control
* **3.2.1.1** Updated Remove-Shortcuts with option to only remove logged in users desktop shortcuts. Updated Function Links. Updated Disable-Standby to create a new powerscheme.
* **4.0.0.0** Converted from a standalone module to a dependency module of admintoolbox. Added a bunch of commands.
* **4.0.1.0** Updated Disable-Standby to support the new module structure. Added import for support files.
* **4.0.2.0** Reduced the module load time using .net methods
* **4.0.2.1** Fix for Uninstall-Applications being exported with a plural noun causing it to not work.
* **4.0.2.2** Fix for Invoke-Unzip
* **4.0.3.0** Added markdown to the changelog
* **4.0.4.0** Spellcheck Everything
* **4.0.5.0** Updated Get-EndpointManagement and added printer functions